<resources>
    <string name="app_name">QuickPro</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_markets">Markets</string>
    <string name="menu_signal">Signal</string>
    <string name="menu_assistant">Assistant</string>
    <string name="menu_chat">Chat</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="icon_alarm">Icon Alarm</string>

    <string name="google_auth">932220569686-ldgsencoho166eqf3047im6ita8ct4t9.apps.googleusercontent.com</string>

    <string name="facebook_app_id">352718671994890</string>
    <string name="fb_login_protocol_scheme">fb352718671994890</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">FOREXimf Signal Channel</string>
    <string name="channel_description">Channel to send signal</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_email_phone">Email / Phone</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_verify_short">Verify</string>
    <string name="action_next_short">Next</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_invalid_code">This code must be 6 letter long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_description">Isi dengan Email atau No Handphone yang Anda gunakan pada saat pendaftaran</string>
    <string name="change_email_description">Isi dengan Email baru yang akan didaftarkan</string>
    <string name="change_phone_description">Isi dengan No Handphone baru yang akan didaftarkan</string>
    <string name="verify_description">Isi dengan kode yang telah kami kirimkan ke: </string>
    <string name="active">ACTIVE</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_camarilla">Camarilla</string>
    <string name="sell_area">Acuan Sell</string>
    <string name="take_profit_1">Take Profit 1</string>
    <string name="take_profit_2">Take Profit 2</string>
    <string name="stop_loss">Stop Loss</string>
    <string name="sell_breakout_area">Sell Jika Tembus</string>
    <string name="buy_breakout_area">Buy Jika Tembus</string>
    <string name="buy_area">Acuan Buy</string>
    <string name="pivot">Pivot</string>
    <string name="open">Open</string>
    <string name="switching">SWITCHING</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
