<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@drawable/signal_item_bg"
    android:layout_margin="5dp"
    android:elevation="1dp"
    android:orientation="vertical"
    tools:targetApi="lollipop">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <TextView
            android:id="@+id/camarilla_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/currency_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/camarilla_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/detail_text_size"/>
    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="17"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/camarilla_pivot_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/pivot"/>
        <TextView
            android:id="@+id/camarilla_pivot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/camarilla_open_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/open"/>
        <TextView
            android:id="@+id/camarilla_open_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/camarilla_sell_area_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/sell_area"/>
        <TextView
            android:id="@+id/camarilla_sell_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/camarilla_sell_tp1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_1"/>
        <TextView
            android:id="@+id/camarilla_sell_tp1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_sell_tp2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_2"/>
        <TextView
            android:id="@+id/camarilla_sell_tp2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_sell_sl_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/stop_loss"/>
        <TextView
            android:id="@+id/camarilla_sell_sl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_area_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/buy_area"/>
        <TextView
            android:id="@+id/camarilla_buy_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_tp1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_1" />
        <TextView
            android:id="@+id/camarilla_buy_tp1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_tp2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_2"/>
        <TextView
            android:id="@+id/camarilla_buy_tp2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_sl_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_marginBottom="20dp"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/stop_loss"/>
        <TextView
            android:id="@+id/camarilla_buy_sl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_breakout_area_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/buy_breakout_area"/>
        <TextView
            android:id="@+id/camarilla_buy_breakout_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_breakout_tp1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_1"/>
        <TextView
            android:id="@+id/camarilla_buy_breakout_tp1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_breakout_tp2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_2"/>
        <TextView
            android:id="@+id/camarilla_buy_breakout_tp2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_buy_breakout_sl_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_marginBottom="20dp"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/stop_loss"/>
        <TextView
            android:id="@+id/camarilla_buy_breakout_sl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_sell_breakout_area_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/sell_breakout_area"/>
        <TextView
            android:id="@+id/camarilla_sell_breakout_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_sell_breakout_tp1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_1"/>
        <TextView
            android:id="@+id/camarilla_sell_breakout_tp1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_sell_breakout_tp2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/take_profit_2"/>
        <TextView
            android:id="@+id/camarilla_sell_breakout_tp2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/camarilla_sell_breakout_sl_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_marginBottom="20dp"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/stop_loss"/>
        <TextView
            android:id="@+id/camarilla_sell_breakout_sl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_text_size"
            android:layout_columnWeight="0.5"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold"/>
    </GridLayout>
</LinearLayout>